--- a/Unibo-Template-main/src/Template.Web/Areas/CapoSettore/Users/Index.cshtml
+++ b/Unibo-Template-main/src/Template.Web/Areas/CapoSettore/Users/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model Template.Web.Areas.CapoSettore.Users.IndexCaposettoreViewModel
+﻿@model Template.Web.Areas.CapoSettore.Users.IndexViewModel
 @{
     ViewData["Title"] = ((Template.Web.Areas.IdentitaViewModel)ViewData[Template.Web.Areas.IdentitaViewModel.VIEWDATA_IDENTITACORRENTE_KEY]).NomeCognome;
 }
