--- a/Unibo-Template-main/src/Template.Web/Areas/Dipendenti/Users/Index.cshtml
+++ b/Unibo-Template-main/src/Template.Web/Areas/Dipendenti/Users/Index.cshtml
@@ -19,10 +19,10 @@
         <table class="table">
             <thead>
                 <tr>
-                    <th scope="col">#</th>
-                    <th scope="col">First</th>
-                    <th scope="col">Last</th>
-                    <th scope="col">Handle</th>
+                    <th scope="col">Date</th>
+                    <th scope="col">WorkHour</th>
+                    <th scope="col">SmartWork</th>
+                    <th scope="col">Holiday</th>
                 </tr>
             </thead>
             <tbody class="table-group-divider">
