add smart working and ferie page

--- a/Unibo-Template-main/src/Template.Web/Areas/Dipendenti/Users/Index.cshtml
+++ b/Unibo-Template-main/src/Template.Web/Areas/Dipendenti/Users/Index.cshtml
@@ -10,8 +10,8 @@
                 <h1>@ViewData["Title"]</h1>
             </div>
         </nav>
-        <a class="btn btn-primary" href="#" role="button">Richiedi Ferie</a>
-        <a class="btn btn-primary" href="#" role="button">SamrtWorking</a>
+        <a class="btn btn-primary" href="@Url.Action(MVC.Dipendenti.Users.Ferie())" role="button">Richiedi Ferie</a>
+        <a class="btn btn-primary" href="@Url.Action(MVC.Dipendenti.Users.SmartWorking())" role="button">SamrtWorking</a>
     </div>   
 }
 @section pageSubtitle{
