--- a/Unibo-Template-main/src/Template.Web/Areas/Dipendenti/Users/Ferie.cshtml
+++ b/Unibo-Template-main/src/Template.Web/Areas/Dipendenti/Users/Ferie.cshtml
@@ -14,6 +14,7 @@
 }
 @section pageSubtitle{
     <div class="container-sm">
+        <div class="row">Giorno di Ferie</div>
         <div class="row g-3">
             <input class="form-control form-control-lg" type="text" placeholder="gg/mm/aa" aria-label="gg/mm/aa">
             <label for="customRange2" class="form-label">Ore di SmartWorking</label>
