--- a/Unibo-Template-main/src/Template.Web/Areas/Dipendenti/Users/SmartWorking.cshtml
+++ b/Unibo-Template-main/src/Template.Web/Areas/Dipendenti/Users/SmartWorking.cshtml
@@ -14,6 +14,12 @@
 }
 @section pageSubtitle{
     <div class="container-sm">
-
+        <div class="row">Giorno di SmartWorking</div>
+        <div class="row g-3">
+            <input class="form-control form-control-lg" type="text" placeholder="gg/mm/aa" aria-label="gg/mm/aa">
+            <label for="customRange2" class="form-label">Ore di SmartWorking</label>
+            <input type="range" class="form-range" min="1" max="8" id="customRange2">
+            <button type="button" class="btn btn-outline-primary">Invia</button>
+        </div>
     </div>
 }
