--- a/Unibo-Template-main/src/Template.Web/Areas/Dipendenti/Users/Ferie.cshtml
+++ b/Unibo-Template-main/src/Template.Web/Areas/Dipendenti/Users/Ferie.cshtml
@@ -1,6 +1,7 @@
 ﻿@model Template.Web.Areas.Dipendenti.Users.FerieViewModel
 @{
     ViewData["Title"] = ((Template.Web.Areas.IdentitaViewModel)ViewData[Template.Web.Areas.IdentitaViewModel.VIEWDATA_IDENTITACORRENTE_KEY]).NomeCognome;
+    Model.setUserId(((Template.Web.Areas.IdentitaViewModel)ViewData[Template.Web.Areas.IdentitaViewModel.VIEWDATA_IDENTITACORRENTE_KEY]).IdCorrente);
 }
 @section pageTitle {
     <div class="container">
@@ -9,19 +10,27 @@
                 <h1>@ViewData["Title"]</h1>
             </div>
         </nav>
-        <a class="btn btn-primary" href="@Url.Action(MVC.Dipendenti.Users.SmartWorking())" role="button">SamrtWorking</a>
+        <a class="btn btn-primary" href="@Url.Action(MVC.Dipendenti.Users.SmartWorking())" role="button">SmartWorking</a>
     </div>   
 }
 @section pageSubtitle{
     <div class="container-sm" style="margin-top: 35px">
         <div class="row">Giorno di Ferie</div>
         <div class="row g-3">
-            <input class="form-control form-control-lg" type="text" placeholder="gg/mm/aa" aria-label="gg/mm/aa">
-            <label for="customRange2" class="form-label">Ore di SmartWorking</label>
-            <div class="container-sm">
-                <input type="range" value="1" class="form-range" min="1" max="8" id="customRange2" oninput="this.nextElementSibling.value = this.value"><output>1</output>
-            </div>
-            <button type="button" class="btn btn-outline-primary">Invia</button>
+            <form autocomplete="off" method="post" class="onit-form-sm" action="@Url.Action(MVC.Dipendenti.Users.Ferie())" id="edit-form">
+                <input id="edit-form-submitter" class="d-none" type="submit" />
+                <fieldset class="pb-3">
+                    <input class="form-control form-control-lg" type="text" asp-for="Day" pattern="\d{1,2}/\d{1,2}/\d{4}" placeholder="gg/mm/aa" value="@Model.DateTommorow()" >
+                    <label for="customRange2" class="form-label">Ore di Ferie : </label>
+                    <output id="hour">1</output>
+                    <div class="container-sm">
+                        <input type="range" value="1" asp-for="HHoliday" class="form-range" min="1" max="8" id="customRange2" oninput="hour.value = this.value">
+                    </div>
+                    <input type="hidden" asp-for="UserId">
+                </fieldset>
+            </form>
+            <div id="liveAlertPlaceholder"></div>
+            <button type="button" class="btn btn-outline-primary" id="liveAlertBtn" onclick="document.getElementById('edit-form-submitter').click()">Invia</button>
         </div>
     </div>
 }
