--- a/Unibo-Template-main/src/Template.Web/Areas/Dipendenti/Users/Index.cshtml
+++ b/Unibo-Template-main/src/Template.Web/Areas/Dipendenti/Users/Index.cshtml
@@ -15,7 +15,7 @@
     </div>   
 }
 @section pageSubtitle{
-    <div class="container-sm">
+    <div class="table-container">
         <table class="table">
             <thead>
                 <tr>
