--- a/Unibo-Template-main/src/Template.Web/wwwroot/css/site.css
+++ b/Unibo-Template-main/src/Template.Web/wwwroot/css/site.css
@@ -2935,6 +2935,9 @@ textarea.form-control-lg {
   background-color: var(--bs-btn-bg);
   border-color: var(--bs-btn-border-color);
 }
+.btnAggiorna {
+    margin-left: 2%;
+}
 .btn:focus-visible {
   color: var(--bs-btn-hover-color);
   background-color: var(--bs-btn-hover-bg);
