--- a/Unibo-Template-main/src/Template.Web/Areas/Dipendenti/Users/Index.cshtml
+++ b/Unibo-Template-main/src/Template.Web/Areas/Dipendenti/Users/Index.cshtml
@@ -36,7 +36,7 @@
                 {
                     @foreach (var user in Model.Users)
                     {
-                        @if (user.Request == null)
+                        @if (user.Request)
                         {
                             ViewData["Request"] = "";
                         } 
