--- a/Unibo-Template-main/src/Template.Web/Areas/CapoSettore/Users/Index.cshtml
+++ b/Unibo-Template-main/src/Template.Web/Areas/CapoSettore/Users/Index.cshtml
@@ -1,12 +1,79 @@
 ﻿@model Template.Web.Areas.CapoSettore.Users.IndexViewModel
-@{
-    ViewData["Title"] = ((Template.Web.Areas.IdentitaViewModel)ViewData[Template.Web.Areas.IdentitaViewModel.VIEWDATA_IDENTITACORRENTE_KEY]).NomeCognome;
-}
+
+
 @section pageTitle {
-    <nav class="navbar navbar-expand navbar-light flex-wrap onit-page-title">   
-        <h1>Ciao Ago</h1>
-        <a class="navbar-brand">
-            @ViewData["Title"]
-        </a>
-    </nav>
+    <div class="container">
+        <div class="row g-4 align-items-end">
+            <form method="get" action="@Url.Action(MVC.CapoSettore.Users.Index())">
+                <div class="row">
+                    <div class="col">
+                        <input type="date" class="form-control" id="startDate" name="startDate" />
+                    </div>
+                    <div class="col">
+                        <input type="date" class="form-control" id="endDate" name="endDate" />
+                    </div>
+                    <div class="col">
+                        <button type="submit" class="btn btn-primary mb-2">Aggiorna</button>
+                    </div>
+                    <div class="col-2">
+                        <a class="btn btn-primary" href="@Url.Action(MVC.Dipendenti.Users.Index())">Portale</a>
+                    </div>
+                </div>
+            </form>
+        </div>
+    </div>
 }
+
+
+
+<div class="table-container" id="scrolling-container">
+    <div class="table-scroll">
+        <table class="table">
+            <thead>
+                <tr>
+                    <th style="width: 200px;">Dipendenti</th>
+                    @foreach (var day in Model.CalendarData.SelectMany(week => week))
+                    {
+                        <th class="@day.CssClass">
+                            <span>@day.Day</span>
+                            <br />
+                            <span>@day.Status</span>
+                        </th>
+                    }
+                </tr>
+            </thead>
+            <tbody>
+                @foreach (var user in Model.Users)
+                {
+                    <tr>
+                        <td>@user.FirstName @user.LastName</td>
+                        @foreach (var day in Model.CalendarData.SelectMany(week => week))
+                        {
+                            //check id user con id model.req
+                            @foreach (var req in Model.Days)
+                            {
+                                if (day.Date == req.Day)
+                                {
+                                    <td class="@day.CssClass">@req.Day</td>
+                                }
+                                else
+                                {
+                                    <td class="@day.CssClass"></td>
+                                }
+                            }
+                        }
+                    </tr>
+                }
+            </tbody>
+        </table>
+    </div>
+</div>
+
+<script>
+    document.addEventListener("DOMContentLoaded", function () {
+        var container = document.getElementById("scrolling-container");
+        var currentDay = document.querySelector(".current-day");
+
+        container.scrollLeft = currentDay.offsetLeft;
+    });
+</script>
