--- a/Unibo-Template-main/src/Template.Web/Areas/CapoSettore/Users/Index.cshtml
+++ b/Unibo-Template-main/src/Template.Web/Areas/CapoSettore/Users/Index.cshtml
@@ -1,31 +1,31 @@
 ﻿@model Template.Web.Areas.CapoSettore.Users.IndexViewModel
 
+
 @section pageTitle {
-    <div class="container row g-4">
-        <div class="col-auto mb-4">
-            <label for="startData" class="form-control-start">Data di inzio:</label>
-            <input type="date" class="form-control" id="startDate" />
-        </div>
-        <div class="col-auto mb-4">
-           <label for="endDate" class="form-control-end">Data di fine:</label>
-           <input type="date" class="form-control" id="endDate" />
-        </div>
-        <div class="col-auto">
-            <a class="btn btn-primary">Aggiorna</a>
-        </div>
-        <div class="col-auto ms-auto">
-            <a class="btn btn-primary" href=" @Url.Action(MVC.Dipendenti.Users.Index())">Portale</a>
+    <div class="container">
+        <div class="row g-4 align-items-end">
+            <form method="get" action="@Url.Action(MVC.CapoSettore.Users.Index())">
+                <div class="row">
+                    <div class="col">
+                        <input type="date" class="form-control" id="startDate" name="startDate" />
+                    </div>
+                    <div class="col">
+                        <input type="date" class="form-control" id="endDate" name="endDate" />
+                    </div>
+                    <div class="col">
+                        <button type="submit" class="btn btn-primary mb-2">Aggiorna</button>
+                    </div>
+                    <div class="col-2">
+                        <a class="btn btn-primary" href="@Url.Action(MVC.Dipendenti.Users.Index())">Portale</a>
+                    </div>
+                </div>
+            </form>
         </div>
     </div>
 }
 
-<p>Ciao</p>
-@foreach (var d in Model.Days)
-{
-    <p>Ciao</p>
-    <p>@d.Request</p>
-}
- 
+
+
 <div class="table-container" id="scrolling-container">
     <div class="table-scroll">
         <table class="table">
@@ -49,9 +49,28 @@
                         <td>@user.FirstName @user.LastName</td>
                         @foreach (var day in Model.CalendarData.SelectMany(week => week))
                         {
-                            <td class="@day.CssClass">
-
-                            </td>
+                            //check id user con id model.req
+                            @foreach (var req in Model.Days)
+                            {
+                                if (req.Id == user.Id)
+                                {
+                                    if (day.Date == req.Day)
+                                    {
+                                        if (req.HHoliday !=0)
+                                        {
+                                            <td class="@day.CssClass">Ferie</td>
+                                        }
+                                        else
+                                        {
+                                            <td class="@day.CssClass">Smart Working</td>
+                                        }
+                                    }
+                                    else
+                                    {
+                                        <td class="@day.CssClass"></td>
+                                    }
+                                }
+                            }
                         }
                     </tr>
                 }
